--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "firebase": "^11.1.0",
     "next": "15.0.3",
     "react": "18.3.0",
     "react-dom": "18.3.0",
