--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.0.3",
     "react": "18.3.0",
     "react-dom": "18.3.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "postcss": "^8",
